# dl_verilator_gnu_radio

./: dlv-tool  dlv-tool-completion.bash  dlv-tool.bash
example/: add.v  counter.v
gr-dlverilog/: CMakeLists.txt  MANIFEST.md
gr-dlverilog/.conda/: README.md
gr-dlverilog/.conda/recipe/: meta.yaml
gr-dlverilog/apps/: CMakeLists.txt
gr-dlverilog/cmake/Modules/: gnuradio-dlverilogConfig.cmake
gr-dlverilog/docs/: CMakeLists.txt  README.dlverilog
gr-dlverilog/docs/doxygen/: CMakeLists.txt  Doxyfile.in
gr-dlverilog/docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
gr-dlverilog/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-dlverilog/grc/: CMakeLists.txt  dlverilog_base_verilog.block.yml
gr-dlverilog/include/gnuradio/dlverilog/: CMakeLists.txt  api.h  base_verilog.h
gr-dlverilog/lib/: CMakeLists.txt  base_verilog_impl.cc  base_verilog_impl.h  dl_verilator.cpp  dl_verilator.hpp
gr-dlverilog/python/dlverilog/: CMakeLists.txt  __init__.py
gr-dlverilog/python/dlverilog/bindings/: CMakeLists.txt  base_verilog_python.cc  python_bindings.cc
gr-dlverilog/python/dlverilog/bindings/docstrings/: base_verilog_pydoc_template.h
scripts/: gen_ios.py  gen_wrapper.py  gen_yaml.py
templates/: dlverilog_template_verilog.block.yml  v_wrapper.cpp
